# music-critique

./: .gitignore  Makefile  README.md  constants.py  examples.json  main.py  pyproject.toml
app/: 1_Music_Critique.py  constants.py
app/pages/: 2_App_Description.py
app/utils/: aai.py  helpers.py  image_gen.py  langchain_utils.py  wordcloud.py
tests/: test_page_content.py
utils/: aai.py  helpers.py  image_gen.py  langchain_utils.py  wordcloud.py
