[tool.poetry]
name = "streamlit-llm-hackathon"
version = "0.1.0"
description = ""
authors = ["rexsimiloluwah <adetoyosi2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
streamlit = "^1.26.0"
wordcloud = "^1.9.2"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
requests = "^2.31.0"
plotly = "^5.17.0"
nltk = "^3.8.1"
langchain = "^0.0.295"
st-clickable-images = "^0.0.3"


[tool.poetry.group.dev.dependencies]
seleniumbase = "^4.18.7"
pytest = "^7.4.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
